--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,20 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity"
-                  android:windowSoftInputMode="stateAlwaysHidden"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".MainActivity"
+                android:windowSoftInputMode="stateAlwaysHidden"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name=".RecyclerViewList"
+                android:windowSoftInputMode="stateAlwaysHidden"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
